<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

class BookRecommendation extends Model
{
    //
}
